# rag-playbook

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  compare_results.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pattern_request.md
.github/workflows/: ci.yml  integration.yml  publish.yml
benchmarks/: run_all.py  run_single.py  visualize.py
benchmarks/datasets/: README.md  download.py
benchmarks/results/latest/: compare_results.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI.md  WHEN_TO_USE.md
docs/patterns/: 01-naive.md  02-hybrid-search.md  03-reranking.md  04-parent-child.md  05-query-decomposition.md  06-hyde.md  07-self-correcting.md  08-agentic.md
examples/: batch_evaluation.py  compare_patterns.py  custom_pipeline.py  custom_vector_store.py  pattern_selection.py  production_tips.py  quickstart.py  streaming_ingest.py  with_langchain.py
sample_docs/: api_reference.md  company_history.md  product_specs.md  refund_policy.md  security_guide.md
src/rag_playbook/: __init__.py
src/rag_playbook/cli/: app.py  bench_cmd.py  compare_cmd.py  formatters.py  ingest_cmd.py  patterns_cmd.py  recommend_cmd.py  run_cmd.py
src/rag_playbook/core/: __init__.py  chunker.py  config.py  cost.py  embedder.py  evaluator.py  exceptions.py  llm.py  models.py  prompts.py  vector_store.py
src/rag_playbook/patterns/: __init__.py  agentic.py  base.py  hybrid_search.py  hyde.py  naive.py  parent_child.py  query_decomposition.py  reranking.py  self_correcting.py
src/rag_playbook/utils/: retry.py  timer.py  tokenizer.py
tests/: conftest.py  test_readme_usage.py
tests/cli/: test_compare_cmd.py  test_patterns_cmd.py  test_recommend_cmd.py  test_run_cmd.py
tests/core/: test_chunker.py  test_config.py  test_cost.py  test_embedder.py  test_evaluator.py  test_exceptions.py  test_llm.py  test_models.py  test_prompts.py  test_vector_store.py
tests/patterns/: test_agentic.py  test_base.py  test_hybrid_search.py  test_hyde.py  test_naive.py  test_parent_child.py  test_query_decomposition.py  test_reranking.py  test_self_correcting.py
tests/utils/: test_retry.py  test_timer.py  test_tokenizer.py
