[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-playbook"
version = "0.1.0"
description = "Compare RAG patterns with real benchmarks. Run one command, see which pattern wins."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Aamir Shahzad", email = "info@aamirshahzad.uk" }]
keywords = ["rag", "llm", "vector-search", "retrieval-augmented-generation", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core: minimum to run any pattern
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "tiktoken>=0.7,<1.0",
    "numpy>=1.26,<3.0",
    "structlog>=24.0,<26.0",
    "typer[all]>=0.12,<1.0",
    "rich>=13.0,<14.0",
]

[project.optional-dependencies]
# Vector stores
chromadb = ["chromadb>=0.5,<1.0"]
pgvector = ["psycopg[binary]>=3.1,<4.0", "pgvector>=0.3,<1.0"]
qdrant = ["qdrant-client>=1.9,<2.0"]

# LLM providers
openai = ["openai>=1.30,<2.0"]
anthropic = ["anthropic>=0.30,<1.0"]

# Reranking (Pattern 03)
reranking = ["sentence-transformers>=3.0,<4.0"]

# Everything (for development + benchmarking)
all = ["rag-playbook[chromadb,pgvector,qdrant,openai,anthropic,reranking]"]

dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-httpx>=0.30,<1.0",
    "pytest-mock>=3.14,<4.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
]

bench = [
    "rag-playbook[all]",
    "matplotlib>=3.9,<4.0",
    "pandas>=2.2,<3.0",
]

[project.scripts]
rag-playbook = "rag_playbook.cli.app:app"

[project.urls]
Homepage = "https://github.com/Aamirofficiall/rag-playbook"
Documentation = "https://github.com/Aamirofficiall/rag-playbook/tree/main/docs"
Repository = "https://github.com/Aamirofficiall/rag-playbook"
Blog = "https://aamirshahzad.uk/notes"

# Tool config

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: No external deps (default)",
    "integration: Needs API keys / vector stores",
    "benchmark: Performance benchmarks (slow, expensive)",
]
addopts = "-m unit --tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
source = ["src/rag_playbook"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
